@@ -1,0 +1,18 @@
+- Test Mark4 8, 16, 64 track modes
+- Test all Mark5B modes
+- Test seeking
+- Implement validate
+- Make test suite
+
+* Implement more decoders
+  x Mark4
+  x Mark5B
+* Documenation
+  x For developers
+  x For users
+x Implement seek
+  x mark5_stream function
+  - Test it!
+x Test all 64 track VLBA modes
+x File Stream -- minimum file size
+x mark5_stream_open compatibility function
